<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:orientation="vertical"
            tools:context="com.example.gabriel.justjava.MainActivity">
            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords"/>


            <TextView
                android:text="@string/header_toppings"
                style="@style/HeaderTextStyle" />

            <CheckBox
                android:id="@+id/whipped_cream_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_whipped_cream"
                android:textSize="16sp"
                android:paddingStart="24dp"/>

            <CheckBox
                android:id="@+id/chocolate_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_chocolate"
                android:textSize="16sp"
                android:paddingStart="24dp"/>


            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/header_quantity"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/button_minus"
                    android:onClick="decrement"/>



                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_0"
                    android:textSize="16sp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:textColor="@android:color/black"/>
                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/button_plus"
                    android:onClick="increment"/>

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_order"
                android:onClick="submitOrder"/>

        </LinearLayout>

    </ScrollView>


